syntax = "proto2";
option java_package = "io.hbar.protobuf.schema";
option java_outer_classname = "LinearRegSeriesSchema";

message LinearRegSeries {

	message LinearReg {

		required int32 timestamp = 1;
		required double value = 2;

	}

	repeated LinearReg series = 1;

}